<resources>
    <string name="app_name">Tourist Info</string>
    <string name="login_page">Log in </string>
    <string name="user_name">username</string>
    <string name="password">password</string>
    <string name="login">Login</string>
    <string name="about_city">About City :</string>
    <string name="famous_places">Famous Places</string>
    <string name="gallery">Gallery</string>
    <string name="description">Description</string>
    <string name="city">City :</string>
    <string name="city_name">city name</string>
    <string name="save">save</string>
    <string name="add_images">add images</string>
    <string name="logout">Logout</string>
    <string name="title_activity_maps">Map</string>
    <string name="title">title</string>
    <string name="data_not_available">Data not available…</string>
    <string name="permission_request_text">We need to save data of cities on your external storage. Without this permission, app can\'t work.\n</string>
    <string name="permission_request_title">Permission Request</string>
    <string name="quit">Quit</string>
    <string name="ok">OK</string>
</resources>
