<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_city_detail_page"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.ruchita.touristinfoapp.CityDetailPageActivity">

    <LinearLayout
        android:id="@+id/linear_layout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <ImageView
        android:id="@+id/city_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/delhi"
        android:layout_marginTop="10dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/linear_layout1">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/about_city"
        android:layout_marginStart="10dp"
        android:textSize="25sp"
        android:textColor="@android:color/black"/>

        <TextView
            android:id="@+id/details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:layout_marginStart="10dp"
            android:textSize="17sp"
            />
    </LinearLayout>

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      android:layout_marginBottom="1dp"
      android:layout_marginRight="2dp"
      android:layout_alignParentBottom="true">
    <Button
        android:id="@+id/famous_places"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@color/colorTransparent3"
        android:text="@string/famous_places"
        android:textColor="@android:color/black"
        android:padding="10dp"
        android:textSize="18sp"
        android:layout_marginStart="2dp"/>
    <Button
        android:id="@+id/gallery"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/gallery"
        android:textSize="18sp"
        android:layout_weight="1"
        android:textColor="@android:color/black"
        android:background="@color/colorTransparent2"
        android:layout_marginStart="2dp"
       />

  </LinearLayout>
</RelativeLayout>
