<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    android:orientation="vertical"
    tools:context="com.example.ruchita.touristinfoapp.GalleryActivity$MainActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"/>

    <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="60dp"
        card_view:cardCornerRadius="5dp">

        <ImageView
            android:layout_width="280dp"
            android:layout_height="100dp"
            android:src="@drawable/tourism_logo2"
            />

    <EditText
        android:id="@+id/user_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="110dp"
        android:hint="@string/user_name"
        android:textColor="@android:color/black"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="155dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="@android:color/black"
        android:textSize="16sp" />

    <Button
        android:id="@+id/button_login"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_marginTop="220dp"
        android:background="@color/button_color"
        android:layout_gravity="center_horizontal"
        android:text="@string/login"
        android:textColor="@android:color/black"
        android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="270dp"
            android:text="register"
            android:layout_marginLeft="40dp"
            android:textColor="@android:color/darker_gray"
            android:textSize="16sp"
             />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="270dp"
            android:text="forget password "
            android:layout_marginLeft="110dp"
            android:textColor="@android:color/darker_gray"
            android:textSize="16sp"/>

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/facebook_logo"
            android:id="@+id/imageView"
            android:layout_marginTop="330dp"
            android:layout_marginStart="40dp"/>
        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/twitter_logo"
            android:layout_marginTop="330dp"
            android:layout_marginStart="100dp"/>
        <ImageView
            android:layout_width="25dp"
            android:layout_height="40dp"
            android:src="@drawable/googleplus_logo"
            android:layout_marginTop="330dp"
            android:layout_marginStart="170dp"/>
    </android.support.v7.widget.CardView>
</LinearLayout>
